# WebServer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: httpconn.h  log.h  threadpool.h  timer.h  webserver.h
root/: 404.html  log.html  register.html  video.html  welcome.html
src/: httpconn.cpp  log.cpp  main.cpp  timer.cpp  webserver.cpp
test/: CMakeLists.txt  conn_test.cpp  http_test.cpp  threadPool_test.cpp
